[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "ppaass-agent"
path = "src/main.rs"
[dependencies]
ppaass_common = { path = "../common", package = "common" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
uuid = { version = "0.8.2", features = ["v4"] }
thiserror = "1.0.30"
anyhow = "1.0.51"
futures = "0.3.21"
serde = "1.0.132"
serde_derive = "1.0.132"
toml = "0.5.8"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
url = "2.2.2"
bytes = "1.1.0"
async-trait = "0.1.52"
lazy_static = "1.4.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.0"
chrono="0.4.19"
