[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppaass_common = { path = "../common", package = "common" }
tokio = {version="1.15.0", features=["full"]}
uuid = {version="0.8.2", features=["v4"]}
thiserror = "1.0.30"
anyhow = "1.0.51"
tokio-util = { version = "0.6.9", features = ["codec"] }
