[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "ppaass-proxy"
path = "src/main.rs"
[dependencies]
ppaass_common = { path = "../common", package = "common" }
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.51"
tokio-util = { version = "0.6.9", features = ["codec"] }
futures = "0.3.19"
futures-util = "0.3.19"
futures-sink = "0.3.19"
log = "0.4.14"
serde = "1.0.132"
serde_derive = "1.0.132"
toml = "0.5.8"
log4rs = { version = "1.0.0", features = ["gzip"] }
bytes = "1.1.0"
lazy_static = "1.4.0"
